Reduced width of logo to no longer overlap the title of the current page (which was really annoying when trying to select title for copy&paste).

--- a/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/skins/denkbares/skin.css
+++ b/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/skins/denkbares/skin.css
@@ -238,11 +238,9 @@ br {
 ul ul, ol ol {
 	margin:0;
 }
-
 .leftmenu ul,ol {
 	padding-left:2em;
 }
-
 ul,ol {
 	padding-left:3em;
 }
@@ -375,8 +373,8 @@ img.attlink {
 } 
 .applicationlogo a {
 	display:block;
-	height:76px;
-	width:264px;
+	height:80px;
+	width:245px;
 	overflow:hidden;
 	margin-left:auto;
 	margin-right:auto;
